--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,13 +29,14 @@
             <ul class="menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/posts">All Posts</a></li>
-                <!-- Logged users -->
+                {{#if isAuthenticated}}
                 <li><a href="/posts/create">Create Post</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="/users/logout">Logout</a></li>
-                <!-- Guest users -->
+                {{else}}
                 <li><a href="/users/register">Register</a></li>
                 <li><a href="/users/login">Login</a></li>
+                {{/if}}
             </ul>
 
         </nav>
