--- a/src/views/posts/index.hbs
+++ b/src/views/posts/index.hbs
@@ -1,51 +1,27 @@
- <main>
+<main>
 
-            <section id="catalog">
-                <h1>All posts</h1>
-                <div class="band">
+  <section id="catalog">
+    <h1>All posts</h1>
+    <div class="band">
 
-                    <!-- If there are posts for creature in the database display each of them -->
-                    <div class="flip flip-vertical">
-                        <div class="front">
-                            <img src="/img/Thestral.jpeg"
-                                alt="Thestral">
-                        </div>
-                        <div class="back">
-                            <h1>Thestral</h1>
-                            <h2>Species: Animal</h2>
-                            <p>Description: Thestrals are an elusive, carnivorous species of winged horse, visible only
-                                to those who have witnessed and embraced a death, and described as having "blank, white,
-                                shining eyes," a "dragonish face," "long, black manes," "great leathery wings," and the
-                                "skeletal body of a great, black, winged horse"; also described by Hagrid as "dead
-                                clever an' useful", and also by Harry as "reptilian". </p>
-                            <a href="#" class="details">Details</a>
-                        </div>
-                    </div>
+      {{#each posts}}
+        <div class="flip flip-vertical">
+          <div class="front">
+            <img src="{{image}}" alt="{{name}}" />
+          </div>
+          <div class="back">
+            <h1>{{name}}</h1>
+            <h2>Species: {{species}}</h2>
+            <p>Description: {{description}}</p>
+            <a href="/posts/details/{{_id}}" class="details">Details</a>
+          </div>
+        </div>
+      {{else}}
+        <div class="no-posts">
+          <p class="no-offer">There are no posts yet...</p>
+        </div>
+      {{/each}}
 
-                    <div class="flip flip-vertical">
-                        <div class="front">
-                            <img src="/img/Draco.jpg"
-                                alt="Draco_Malfoy">
-                        </div>
-                        <div class="back">
-                            <h1>Draco Malfoy</h1>
-                            <h2>Species: Human</h2>
-                            <p>Description: Draco Malfoy is a British pure-blood wizard and the only son of Lucius and
-                                Narcissa Malfoy. The son of a Death Eater, Draco was raised to strongly believe in the
-                                importance of blood purity. He looked down on half-bloods and Muggle-borns. Draco
-                                attended Hogwarts School of Witchcraft and Wizardry. He was sorted into Slytherin House
-                                the moment the Sorting Hat touched his head.</p>
-                            <a href="#" class="details">Details</a>
-                        </div>
-                    </div>
-
-                    <!-- If there are still no posts in the database display: -->
-                    <!-- <div class="no-posts">
-                        <p class="no-offer">There are no posts yet...</p>
-                    </div> -->
-                </div>
-            </section>
-        </main>
-
-
-  
+    </div>
+  </section>
+</main>
